Making TypeConversionException an IOE (renamed to InconvertibleTypesException), with appropriate ErrorCode work.

--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -129,6 +129,7 @@ TYPES_ARE_STATIC	= Type {0} isn't from the static list
 
 UNKNOWN_TYPE_SIZE	= Unknown or unsupported size for Type {0}
 UNKNOWN_TYPE		= Unknown or unsupported data type {0}
+INCONVERTIBLE_TYPES = Can't convert source type {0} to target {1}
 
 #
 # Unsupported Features Errors, Should be empty, but isn't
