Add support for Set SCHEMA <XXX> Add test for the Set Schema statements Fix error handling for PostgresServerConnection.

--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -131,6 +131,10 @@ UNKNOWN_TYPE_SIZE	= Unknown or unsupported size for Type {0}
 UNKNOWN_TYPE		= Unknown or unsupported data type {0}
 
 #
+# Server session state errors
+#
+NO_SUCH_SCHEMA		= Unknown schema `{0}`
+#
 # Unsupported Features Errors, Should be empty, but isn't
 #
 UNSUPPORTED_SQL 	= Unsupported SQL {0} : {1}
