Allowing various numeric -> date/time conversions

--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -66,7 +66,7 @@ NO_SUCH_RECORD		= NO_SUCH_RECORD: Unused error code
 FK_CONSTRAINT_VIOLATION	= FK_CONSTRAINT_VIOLATION: Unused error code
 UNSUPPORTED_MODIFICATION= UNSUPPORTED_MODIFICATION: Unused error code
 
-TABLEDEF_MISMATCH 	= ID<{0}> from RowData didn't match given ID <{0}>
+TABLEDEF_MISMATCH 	= ID<{0}> from RowData didn''t match given ID <{0}>
 NO_SUCH_ROW 		= Missing record at key: {0}
 CONCURRENT_MODIFICATION = Update concurrent with scan for {0}
 TABLE_DEFINITION_CHANGED= Update concurrent with table definition change for {0}
@@ -125,11 +125,11 @@ TREENAME_MISMATCH 	= Table `{0}`.`{1}` treename `{2}` does not match its group t
 NULL_REFERENCE 		= {0} `{1}` has null reference to {2}
 BAD_AIS_REFERENCE 	= {0} `{1}` has bad reference to {2} `{3}`
 BAD_INTERNAL_SETTING 	= {0} `{1}` has incorrect internal setting for {2}
-TYPES_ARE_STATIC	= Type {0} isn't from the static list
+TYPES_ARE_STATIC	= Type {0} isn''t from the static list
 
 UNKNOWN_TYPE_SIZE	= Unknown or unsupported size for Type {0}
 UNKNOWN_TYPE		= Unknown or unsupported data type {0}
-INCONVERTIBLE_TYPES = Can't convert source type {0} to target {1}
+INCONVERTIBLE_TYPES = Can''t convert source type {0} to target {1}
 
 #
 # Unsupported Features Errors, Should be empty, but isn't
