GroupIndex creation process updated to throw IOE exceptions, not internal ones.

--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -52,6 +52,8 @@ DUPLICATE_SCHEMA	= Schema `{0}` already exists
 DROP_SCHEMA_NOT_ALLOWED = Schema `{0}` contains user objects and can not be dropped
 WRONG_TABLE_FOR_INDEX	= Table `{0}`.`{1}` can not be used to create index
 MISSING_DDL_PARAMETERS	= Missing expected parameters to DDL
+INDEX_COL_NOT_IN_GROUP	= Group index `{0}` has column `{1}` which is not in the group table
+INDEX_TABLE_NOT_IN_GROUP= Group index `{0}` has column `{1}` referring to table {3} which is not in the group
 #
 # DML ERRORS
 #
