First pass refactoring for the CUD process. move the specifics from the OperatorCompiler to CUDCompiler static functions. Compiles but does not pass tests.

--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -182,4 +182,5 @@ NO_ACTIVE_CURSOR 	= No cursor found for tableId <{0}>
 CURSOR_CLOSE_BAD 	= Removing RowCollector for Table <{0}> removed the wrong one
 PERSISTIT_ERROR 	= Persistit Data Layer error: {0}
 INVALID_VOLUME		= TreeService tried to load a bad volume: {0}
-TABLE_NOT_BOUND		= AIS User table not bound to DML statement during compile; {0}
+TABLE_NOT_BOUND		= AIS User table not bound to DML statement during compile: {0}
+COLUMN_NOT_BOUND	= AIS User column `{0}` not bound to DML at {1} during compile.
