--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -95,6 +95,10 @@ AIS_MYSQL_SQL_EXCEPTION = {0} generated SQLException: {1}
 AIS_CSV_ERROR		= {0} generated IOException: {1}
 
 #
+# DML insert/update/delete errors
+#
+INSERT_NULL_CHECK	= Inserting null into not null column `{0}` is not allowed
+#
 # Messaging Errros
 #
 MALFORMED_REQUEST 	= MALFORMED_REQUEST: Unused error code
