Adding error checking.

--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -89,6 +89,7 @@ MULTIPLE_JOINS		= Too many joins using table `{0}`.`{1}`
 VIEW_BAD_SUBQUERY	= View `{0}` does not have a correct query plan: {0}
 TABLE_BAD_SUBQUERY	= Binding information for subquery table `{0}`.`{1}` failed: {2}
 WRONG_FUNCTION_ARITY= Function required {0} arguments, but found {1}
+NO_SUCH_FUNCTION    = Function {0} is not defined
     
 ROW_OUTPUT 		= Buffer too small to accommodate row output. Row count: {0}
 AIS_MYSQL_SQL_EXCEPTION = {0} generated SQLException: {1}
