--- a/pom.xml
+++ b/pom.xml
@@ -378,6 +378,7 @@
                     <exclude>**/*.json</exclude>
                     <exclude>**/*.sql</exclude>
                     <exclude>**/*.expected</exclude>
+                    <exclude>**/*.error</exclude>
                     <exclude>**/*.dat</exclude>
                     <exclude>**/*.fail</exclude>
                     <exclude>**/*.params</exclude>
