Fix bug 713387 again. This was re-introduced with the update create table change (r1001) missing the validation of the index sizes. The current testing didn't catch the regressions because all the ITs use the older DDLSource parser which kept the index check. But the newer AIS check didn't.

--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -149,6 +149,7 @@ UNSUPPORTED_CREATE_SELECT = Unsupported `CREATE TABLE` from `SELECT`
 UNSUPPORTED_FK_INDEX	= Unsupported non-grouping Foreign Key
 UNSUPPORTED_CHECK	= Unsupported check constraint
 UNSUPPORTED_GROUP_UNIQUE= Group index `{0}` can not be a unique index
+UNSUPPORTED_INDEX_PREFIX= Unsupported index prefix for `{0}`.`{1}`.`{2}`
 #
 # Configuration, Startup, and Shutdown Errors
 #
