--- a/src/test/resources/com/akiban/sql/optimizer/rule/find-groups/rules.yml
+++ b/src/test/resources/com/akiban/sql/optimizer/rule/find-groups/rules.yml
@@ -1,2 +1,2 @@
-- com.akiban.sql.optimizer.rule.ASTToStatement
-- com.akiban.sql.optimizer.rule.FindGroupJoins
+- com.akiban.sql.optimizer.rule.ASTStatementLoader
+- com.akiban.sql.optimizer.rule.GroupJoinFinder
