--- a/src/test/resources/com/akiban/sql/optimizer/rule/fold-constants/rules.yml
+++ b/src/test/resources/com/akiban/sql/optimizer/rule/fold-constants/rules.yml
@@ -1,3 +1,3 @@
-- com.akiban.sql.optimizer.rule.ASTToStatement
+- com.akiban.sql.optimizer.rule.ASTStatementLoader
 - com.akiban.sql.optimizer.rule.AggregateMapper
-- com.akiban.sql.optimizer.rule.FoldConstants
+- com.akiban.sql.optimizer.rule.ConstantFolder
