--- a/src/test/resources/com/akiban/sql/optimizer/rule/pick-indexes/rules.yml
+++ b/src/test/resources/com/akiban/sql/optimizer/rule/pick-indexes/rules.yml
@@ -1,3 +1,3 @@
-- com.akiban.sql.optimizer.rule.ASTToStatement
-- com.akiban.sql.optimizer.rule.FindGroupJoins
-- com.akiban.sql.optimizer.rule.PickIndexes
+- com.akiban.sql.optimizer.rule.ASTStatementLoader
+- com.akiban.sql.optimizer.rule.GroupJoinFinder
+- com.akiban.sql.optimizer.rule.IndexPicker
