Refactor PostgresMessenger list of postgress messages into a PostgresMessages enum. To give the PostgresMessenger better error handling. Adds a check of allowed messages and estimated message sizes.

--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -68,7 +68,7 @@ NO_SUCH_RECORD		= NO_SUCH_RECORD: Unused error code
 FK_CONSTRAINT_VIOLATION	= FK_CONSTRAINT_VIOLATION: Unused error code
 UNSUPPORTED_MODIFICATION= UNSUPPORTED_MODIFICATION: Unused error code
 
-TABLEDEF_MISMATCH 	= ID<{0}> from RowData didn''t match given ID <{0}>
+TABLEDEF_MISMATCH 	= ID <{0}> from RowData didn''t match given ID <{1}>
 NO_SUCH_ROW 		= Missing record at key: {0}
 CONCURRENT_MODIFICATION = Update concurrent with scan for {0}
 TABLE_DEFINITION_CHANGED= Update concurrent with table definition change for {0}
@@ -173,6 +173,7 @@ TAP_BEAN_FAIL		= Akiban Server Tap bean startup failure: {0}
 SET_FILTER_FAIL		= PersisitStore setting DisplayFilter failed because {0}
 SCHEMA_LOAD_IO_ERROR	= Loading base AIS schema failed due to IO error: {0}
 QUERY_LOG_CLOSE_FAIL	= Closing the query log failed due to IO error: {0}
+INVALID_PORT		= Invalid configure port: {0}
 #
 # Akiban Server errors
 #
