Extend Limit operator:  Allow number of rows to skip first (OFFSET) as well.  Allow either that or the limit to come from a binding, which will need to be an integer to support OFFSET $1.

--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -92,6 +92,7 @@ WRONG_FUNCTION_ARITY    = Function required {0} arguments, but found {1}
 NO_SUCH_FUNCTION        = Function {0} is not defined
 ORDER_BY_NON_INTEGER_CONSTANT = ORDER BY non integer constant: {0}
 ORDER_BY_INTEGER_OUT_OF_RANGE = ORDER BY index {0} out of range {1}
+NEGATIVE_LIMIT          = {0} {1} should be non-negative
     
 ROW_OUTPUT 		= Buffer too small to accommodate row output. Row count: {0}
 AIS_MYSQL_SQL_EXCEPTION = {0} generated SQLException: {1}
