Split out rule for figuring out flatten, etc.

--- a/src/test/resources/com/akiban/sql/optimizer/rule/operator/rules.yml
+++ b/src/test/resources/com/akiban/sql/optimizer/rule/operator/rules.yml
@@ -4,4 +4,5 @@
 #- com.akiban.sql.optimizer.rule.OuterJoinPromoter
 - com.akiban.sql.optimizer.rule.GroupJoinFinder
 - com.akiban.sql.optimizer.rule.IndexPicker
+- com.akiban.sql.optimizer.rule.BranchJoiner
 - com.akiban.sql.optimizer.rule.OperatorAssembler
