--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -14,7 +14,7 @@
 #
 
 # Set root category priority to INFO
-log4j.rootCategory=DEBUG,console
+log4j.rootCategory=WARN,console
 
 # Set to be a ConsoleAppender (writes to system console).
 log4j.appender.console=org.apache.log4j.ConsoleAppender
