Getting tests to run. Fixes for bugs 789397, 800015, 857741.

--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -20,7 +20,7 @@ UNSUPPORTED_OPERATION	= UNSUPPORTED_OPERATION: unused error code
 #
 SERVER_SHUTDOWN		= SERVER_SHUTDOWN: Unused Error Code
 STALE_AIS		= AIS generation seen was {0,number,integer} but current generation is {1,number,integer}
-METAMODEL_MISMATCH	= AIS Model version mismatch, expected version {0,number,integer} v.s. actual version {0,number,integer}
+METAMODEL_MISMATCH	= Attempt to reference data produced by an unsupported earlier release.
 
 #
 # DDL ERRORS
@@ -106,6 +106,7 @@ INSERT_NULL_CHECK	= Inserting null into not null column `{0}` is not allowed
 # Messaging Errros
 #
 MALFORMED_REQUEST 	= MALFORMED_REQUEST: Unused error code
+QUERY_CANCELED      = Query canceled by user
 BAD_STATISTICS_TYPE 	= Unexpected histogram request type <{0}>
 
     
