--- a/src/main/resources/com/akiban/server/service/servicemanager/default-services.yaml
+++ b/src/main/resources/com/akiban/server/service/servicemanager/default-services.yaml
@@ -14,7 +14,7 @@
     com.akiban.server.store.Store : com.akiban.qp.persistitadapter.OperatorStore
     com.akiban.sql.pg.PostgresService : com.akiban.sql.pg.PostgresServerManager
     com.akiban.server.service.instrumentation.InstrumentationService : com.akiban.server.service.instrumentation.InstrumentationServiceImpl
-    com.akiban.server.expression.ExpressionFactory : com.akiban.server.expression.std.StandardExpressionFactory
+    com.akiban.server.expression.ExpressionRegistry : com.akiban.server.expression.std.StandardExpressionRegistry
 
 # This binding is really just a crutch while we move away from the static SMI.get() pattern
 - bind:
