--- a/src/test/resources/com/akiban/sql/optimizer/rule/fold-joins/rules.yml
+++ b/src/test/resources/com/akiban/sql/optimizer/rule/fold-joins/rules.yml
@@ -4,7 +4,5 @@
 #- com.akiban.sql.optimizer.rule.OuterJoinPromoter
 - com.akiban.sql.optimizer.rule.GroupJoinFinder
 - com.akiban.sql.optimizer.rule.IndexPicker
-#- com.akiban.sql.optimizer.rule.NestedLoopFolder
-- com.akiban.sql.optimizer.rule.BranchJoiner
-#- com.akiban.sql.optimizer.rule.SelectPreponer
-- com.akiban.sql.optimizer.rule.OperatorAssembler
+- com.akiban.sql.optimizer.rule.NestedLoopFolder
+#- com.akiban.sql.optimizer.rule.BranchJoiner
