--- a/src/test/resources/com/akiban/sql/optimizer/rule/join-branches/rules.yml
+++ b/src/test/resources/com/akiban/sql/optimizer/rule/join-branches/rules.yml
@@ -1,4 +1,5 @@
 - com.akiban.sql.optimizer.rule.ASTStatementLoader
 - com.akiban.sql.optimizer.rule.GroupJoinFinder
 - com.akiban.sql.optimizer.rule.IndexPicker
+#- com.akiban.sql.optimizer.rule.NestedLoopFolder
 - com.akiban.sql.optimizer.rule.BranchJoiner
