--- a/src/test/resources/com/akiban/sql/optimizer/rule/fold-maps/rules.yml
+++ b/src/test/resources/com/akiban/sql/optimizer/rule/fold-maps/rules.yml
@@ -4,5 +4,7 @@
 #- com.akiban.sql.optimizer.rule.OuterJoinPromoter
 - com.akiban.sql.optimizer.rule.GroupJoinFinder
 - com.akiban.sql.optimizer.rule.IndexPicker
-- com.akiban.sql.optimizer.rule.NestedLoopFolder
-#- com.akiban.sql.optimizer.rule.BranchJoiner
+- com.akiban.sql.optimizer.rule.NestedLoopMapper
+- com.akiban.sql.optimizer.rule.BranchJoiner
+- com.akiban.sql.optimizer.rule.SelectPreponer
+- com.akiban.sql.optimizer.rule.MapFolder
