--- a/src/test/resources/com/akiban/sql/optimizer/rule/operator/rules.yml
+++ b/src/test/resources/com/akiban/sql/optimizer/rule/operator/rules.yml
@@ -4,8 +4,8 @@
 #- com.akiban.sql.optimizer.rule.OuterJoinPromoter
 - com.akiban.sql.optimizer.rule.GroupJoinFinder
 - com.akiban.sql.optimizer.rule.IndexPicker
-#- com.akiban.sql.optimizer.rule.NestedLoopMapper
+- com.akiban.sql.optimizer.rule.NestedLoopMapper
 - com.akiban.sql.optimizer.rule.BranchJoiner
 #- com.akiban.sql.optimizer.rule.SelectPreponer
-#- com.akiban.sql.optimizer.rule.MapFolder
+- com.akiban.sql.optimizer.rule.MapFolder
 - com.akiban.sql.optimizer.rule.OperatorAssembler
