Update pom/excludes to remove references to files that no longer exist

--- a/pom.xml
+++ b/pom.xml
@@ -390,23 +390,16 @@
                     <exclude>.idea/**</exclude>
                     <exclude>.bzrignore</exclude>
                     <exclude>velocity.log</exclude>
-                    <exclude>algebra_testbed/**</exclude>
                     <!-- No extension. Manually add header and ignore -->
                     <exclude>bin/akserver</exclude>
                     <exclude>bin/akloader</exclude>
                     <exclude>conf/config/jvm.options</exclude>
-                    <exclude>doc/examples/social/rails/README</exclude>
-                    <exclude>doc/examples/social/rails/Rakefile</exclude>
                     <exclude>doc/release_notes.txt</exclude>
-                    <exclude>src/bin/aisread</exclude>
-                    <exclude>src/bin/aiswrite</exclude>
                     <!-- Files requiring a specific format (packaging control, test output, etc) -->
-                    <exclude>**/*.rhtml</exclude>
                     <exclude>debian/*</exclude>
-                    <exclude>doc/examples/social/rails/script/**</exclude>
                     <exclude>redhat/*</exclude>
                     <exclude>src/main/resources/version/akserver_version</exclude> 
-                    <exclude>src/test/resources/com/akiban/**/README.txt</exclude> 
+                    <exclude>src/test/resources/com/akiban/**/README*</exclude> 
                     <exclude>src/test/resources/com/akiban/ais/model/staticgrouping/*</exclude>
                 </excludes>
                 <mapping>
