--- a/src/test/resources/com/akiban/sql/optimizer/rule/operator/rules.yml
+++ b/src/test/resources/com/akiban/sql/optimizer/rule/operator/rules.yml
@@ -3,6 +3,7 @@
 #- com.akiban.sql.optimizer.rule.ConstantFolder
 #- com.akiban.sql.optimizer.rule.OuterJoinPromoter
 - com.akiban.sql.optimizer.rule.GroupJoinFinder
+#- com.akiban.sql.optimizer.rule.InConditionReverser
 - com.akiban.sql.optimizer.rule.IndexPicker
 - com.akiban.sql.optimizer.rule.NestedLoopMapper
 - com.akiban.sql.optimizer.rule.BranchJoiner
