Re-add the query cancel error.

--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -141,7 +141,7 @@ TYPES_ARE_STATIC	= Type `{0}` isn''t from the static list
 # Class 51 - Internal problems created by user configuration
 #
 STALE_AIS		= AIS generation seen was {0,number,integer} but current generation is {1,number,integer}
-METAMODEL_MISMATCH	= AIS Model version mismatch, expected version {0,number,integer} v.s. actual version {0,number,integer}
+METAMODEL_MISMATCH	= Attempt to reference data produced by an unsupported earlier release.
 MALFORMED_REQUEST 	= MALFORMED_REQUEST: Unused error code
 BAD_STATISTICS_TYPE 	= Unexpected histogram request type <{0}>
 #
@@ -194,6 +194,10 @@ CONCURRENT_MODIFICATION = Update concurrent with scan for {0}
 NO_ROWS_UPDATED 	= Update row did not update any rows: {0}
 TOO_MANY_ROWS_UPDATED 	= Update row touched {0}, altered {1} rows: {2}
 INSERT_NULL_CHECK	= Inserting null into not null column `{0}` is not allowed
+#
+# Class 58 - query canceled by user
+#
+QUERY_CANCELED		= Query canceled by user
 #
 # Class 70 - Unknown errors
 # 
