modifying pom to not care about the functionpath files

--- a/pom.xml
+++ b/pom.xml
@@ -401,6 +401,8 @@
                     <exclude>src/main/resources/version/akserver_version</exclude> 
                     <exclude>src/test/resources/com/akiban/**/README*</exclude> 
                     <exclude>src/test/resources/com/akiban/ais/model/staticgrouping/*</exclude>
+                    <exclude>src/main/resources/com/akiban/server/service/functions/functionpath.txt</exclude>
+                    <exclude>src/test/resources/com/akiban/server/service/functions/testfunctionpath.txt</exclude>
                 </excludes>
                 <mapping>
                     <g>JAVADOC_STYLE</g>
