Fix bug 852350 : Update the date and long extractors to throw IOE subclasses specific to the errors. Update the RowDataBuilder to not throw TableDefinitionMismatchException, but let the lower exceptions flow through. Update the tests to verify the correct errors.

--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -31,7 +31,9 @@ SELECT_EXISTS_ERROR	= Cannot `SELECT *` in non-EXISTS subquery
 #
 # Class 22 - data exception
 #
-DIVIDE_BY_ZERO		= Division by zero          
+INVALID_DATE_FORMAT	= Invalid {0} format: {1}
+DIVIDE_BY_ZERO		= Division by zero       
+INVALID_CHAR_TO_NUM	= Unable to convert ''{0}'' to numeric    
 TABLE_DEFINITION_CHANGED= Update concurrent with table definition change for {0}
 NEGATIVE_LIMIT          = {0} {1} should be non-negative
 #
