--- a/src/test/resources/com/akiban/sql/optimizer/rule/compact-exprs/rules.yml
+++ b/src/test/resources/com/akiban/sql/optimizer/rule/compact-exprs/rules.yml
@@ -8,5 +8,6 @@
 - com.akiban.sql.optimizer.rule.NestedLoopMapper
 - com.akiban.sql.optimizer.rule.BranchJoiner
 - com.akiban.sql.optimizer.rule.SelectPreponer
+- com.akiban.sql.optimizer.rule.AggregateSplitter
 - com.akiban.sql.optimizer.rule.MapFolder
 - com.akiban.sql.optimizer.rule.ExpressionCompactor
