--- a/src/test/resources/com/akiban/sql/optimizer/rule/fold-maps/rules.yml
+++ b/src/test/resources/com/akiban/sql/optimizer/rule/fold-maps/rules.yml
@@ -7,4 +7,5 @@
 - com.akiban.sql.optimizer.rule.NestedLoopMapper
 - com.akiban.sql.optimizer.rule.BranchJoiner
 - com.akiban.sql.optimizer.rule.SelectPreponer
+- com.akiban.sql.optimizer.rule.AggregateSplitter
 - com.akiban.sql.optimizer.rule.MapFolder
