Addressing review comments.

--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -60,6 +60,10 @@ NO_TRANSACTION		= No transaction currently in progress for this session
 # 
 UNSUPPORTED_CHARSET 	= Table `{0}`.`{1}` has unsupported character set `{2}`
 #
+# Class 38 - external routine exception
+#
+STALE_PLAN 	= The current version of loadable plan `{0}` has not been loaded. Note that a schema change will invalidate all previously loaded plans.
+#
 # Class 3F - invalid schema name
 #
 NO_SUCH_SCHEMA		= Unknown schema `{0}`
