--- a/src/main/resources/com/akiban/server/error/error_code.properties
+++ b/src/main/resources/com/akiban/server/error/error_code.properties
@@ -28,6 +28,7 @@ UNSUPPORTED_CHECK	= Unsupported check constraint
 UNSUPPORTED_GROUP_UNIQUE= Group index `{0}` can not be a unique index
 UNSUPPORTED_INDEX_PREFIX= Unsupported index prefix for `{0}`.`{1}`.`{2}`
 SELECT_EXISTS_ERROR	= Cannot `SELECT *` in non-EXISTS subquery
+UNSUPPORTED_GROUP_INDEX_JOIN = Unsupported group index join type `{0}`
 #
 # Class 22 - data exception
 #
@@ -84,6 +85,8 @@ WRONG_FUNCTION_ARITY    = Function required {0} arguments, but found {1}
 NO_SUCH_FUNCTION        = Function {0} is not defined
 ORDER_GROUP_BY_NON_INTEGER_CONSTANT = {0} BY non integer constant: {1}
 ORDER_GROUP_BY_INTEGER_OUT_OF_RANGE = {0} BY index {1} out of range {2}
+MISSING_GROUP_INDEX_JOIN = Group index must include `USING LEFT|RIGHT JOIN`
+TABLE_INDEX_JOIN         = Table index does not have a join type
 #
 # Class 50 - DDL definition failure
 #
