Allow JVM override for IT's as well.

--- a/pom.xml
+++ b/pom.xml
@@ -339,6 +339,7 @@
                     <akserver.port>${akserver.port}</akserver.port>
                     <akserver.postgres.port>${akserver.postgres.port}</akserver.postgres.port>
                 </systemPropertyVariables>
+                <argLine>${akiban.test.extraJvmArgs}</argLine>
             </configuration>
             <executions>
                 <execution>
